; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_uart.c_l_uart_getconfig.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_uart.c_l_uart_getconfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@uart = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @l_uart_getconfig to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @l_uart_getconfig(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @luaL_checkinteger(i32* %8, i32 1)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @uart, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @MOD_CHECK_ID(i32 %10, i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @platform_uart_get_config(i32 %13, i32* %7, i32* %4, i32* %5, i32* %6)
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @lua_pushinteger(i32* %15, i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @lua_pushinteger(i32* %18, i32 %19)
  %21 = load i32*, i32** %2, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @lua_pushinteger(i32* %21, i32 %22)
  %24 = load i32*, i32** %2, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @lua_pushinteger(i32* %24, i32 %25)
  ret i32 4
}

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32 @MOD_CHECK_ID(i32, i32) #1

declare dso_local i32 @platform_uart_get_config(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
